data/stackoverflow-snippets/cpp/1306
main.cpp:25:16: error: variable or field 'letsFight' declared void
 void letsFight(struct* players[0], struct* players[1]) {
                ^~~~~~
main.cpp:25:16: error: expected primary-expression before 'struct'
main.cpp:25:36: error: expected primary-expression before 'struct'
 void letsFight(struct* players[0], struct* players[1]) {
                                    ^~~~~~
main.cpp:83:23: error: expected primary-expression before 'struct'
 string showBestPlayer(struct* players[0], struct* players[1]) {
                       ^~~~~~
main.cpp:83:43: error: expected primary-expression before 'struct'
 string showBestPlayer(struct* players[0], struct* players[1]) {
                                           ^~~~~~
main.cpp:83:63: error: expected ',' or ';' before '{' token
 string showBestPlayer(struct* players[0], struct* players[1]) {
                                                               ^
main.cpp: In function 'int main()':
main.cpp:98:20: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  for (int i = 0; i = 1; ++i) {
                  ~~^~~
main.cpp:101:4: error: expected ';' before 'cout'
    cout << ""Input a weapon:"";
    ^~~~
main.cpp:104:12: error: no match for 'operator*' (operand type is 'Player')
  letsFight(*players[0], *players[1]);
            ^~~~~~~~~~~
main.cpp:104:25: error: no match for 'operator*' (operand type is 'Player')
  letsFight(*players[0], *players[1]);
                         ^~~~~~~~~~~
main.cpp:104:2: error: 'letsFight' was not declared in this scope
  letsFight(*players[0], *players[1]);
  ^~~~~~~~~
main.cpp:105:17: error: no match for 'operator*' (operand type is 'Player')
  showBestPlayer(*players[0], *players[1]);
                 ^~~~~~~~~~~
main.cpp:105:30: error: no match for 'operator*' (operand type is 'Player')
  showBestPlayer(*players[0], *players[1]);
                              ^~~~~~~~~~~
